--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,15 @@
       </div>
     </navbar>
     <section>
-      Home Page
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-3-xl red"></div>
+          <div class="col-12 col-3-xl pink"></div>
+          <div class="col-12 col-3-xl yellow"></div>
+          <div class="col-12 col-3-xl orange"></div>
+          
+        </div>
+      </div>
     </section>
     <footer>
       Footer
