--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-12 col-3-xl red"></div>
+          <div class="col-12 col-3-xl red">
+            <button>Carla</button>
+          </div>
           <div class="col-12 col-3-xl pink"></div>
           <div class="col-12 col-3-xl yellow"></div>
           <div class="col-12 col-3-xl orange"></div>
