--- a/lifestyle.html
+++ b/lifestyle.html
@@ -26,14 +26,30 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-12 col-3-xl red">
-                <a href="staples.html" </a><img src="C:\Users\carla\OneDrive\Desktop\College\Web Design\WebDesign\src\Images\kitchenimage.jpg" alt="Kitchen" height="200" width="280">
+          <div class="col-12 col-3-xl">
+                <a href="staples.html" </a><img src="C:\Users\carla\OneDrive\Desktop\College\Web Design\WebDesign\src\Images\kitchenimage2.jpg.jpg" alt="Kitchen" height="200" width="280">
+                  <h3>Kitchen Staples</h3>
           </div>
-          <div class="col-12 col-3-xl pink"></div>
-          <div class="col-12 col-3-xl yellow"></div>
-          <div class="col-12 col-3-xl orange"></div>
-          
+          <div class="container">
+          <div class="row">
+          <div class="col-12 col-10-xl"></div>
+                <a href="mythsbusted.html"</a><img src="C:\Users\carla\OneDrive\Desktop\College\Web Design\WebDesign\src\Images\fatloss.jpg.jpg" alt="Training" heiht="200" width="280">
+                  <h3>Myths Busted - Fatloss Edition!</h3>
         </div>
+        <div class="container">
+            <div class="row">
+            <div class="col-12 col-10-xl"></div>
+                  <a href="leaneating.html"</a><img src="C:\Users\carla\OneDrive\Desktop\College\Web Design\WebDesign\src\Images\leaneating2.jpg" alt="Lean Eating" heiht="200" width="280">
+                    <h3>Lean Eating</h3>
+          </div>
+        <div class="container">
+            <div class="row">
+            <div class="col-12 col-10-xl"></div>
+                <a href="beachbod.html"</a><img src="C:\Users\carla\OneDrive\Desktop\College\Web Design\WebDesign\src\Images\beachbod.jpg" alt="Lean Eating" heiht="200" width="280">
+                  <h3>Beach Bod Basics</h3>
+            </div>          
+      </div>
+      </div>
       </div>
     </section>
     <footer>
