--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
   <script type="text/javascript" src="js/script.js"></script>
   <title>Hello, world!</title>
 </head>
@@ -31,15 +34,74 @@
     </div>
   </navbar>
 
-  <section>
+  <section class="homeSection homeSection--first hero">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-3-xl"></div>
-        <div class="col-12 col-3-xl"></div>
-        <div class="col-12 col-3-xl"></div>
+        <div class="col-12 col-md-6">
+          <div class="hero__left">
+            <img class="hero__img" src="images/breakfast.jpg" alt="breakfast" />
+          </div>
+        </div>
+        <div class="col-12 col-md-6">
+
+        </div>
       </div>
     </div>
   </section>
+
+  <section class="homeSection homeSection--second">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-3-xl">
+          <h1>Recipies Lorem Ipsum</h1>
+          <div class="row">
+            <div class="col-12 col-4-lg">
+              <h2>Hello Food</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+            <div class="col-12 col-4-lg">
+              <h2>Hello Food</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+            <div class="col-12 col-4-lg">
+              <h2>Hello Food</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="homeSection homeSection--third">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-3-xl">
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="homeSection homeSection--fourth">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-3-xl">
+
+        </div>
+      </div>
+    </div>
+  </section>
+
   <footer>
     Footer
   </footer>
