--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/script.js"></script>
-    <title>Hello, world!</title>
+    <title>YouAreWhatYouEat</title>
   </head>
   <body>
     <navbar>
@@ -15,6 +15,7 @@
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
+        <a href="#">Lifestyle</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
@@ -23,9 +24,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-12 col-3-xl red">
-            <button>Carla</button>
-          </div>
+          <div class="col-12 col-3-xl red"></div>
           <div class="col-12 col-3-xl pink"></div>
           <div class="col-12 col-3-xl yellow"></div>
           <div class="col-12 col-3-xl orange"></div>
