--- a/src/lifestyle.html
+++ b/src/lifestyle.html
@@ -29,38 +29,30 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-3-xl">
-          <a href="staples.html" </a> <img
-            src="C:\Users\carla\OneDrive\Desktop\College\Web Design\WebDesign\src\Images\kitchenimage2.jpg.jpg"
-            alt="Kitchen" height="200" width="280">
-            <h3>Kitchen Staples</h3>
+            <a href="staples.html"> <img src="\Images\kitchenimage2.jpg" alt="Kitchen" height="200" width="280"></a>
+            <h3 class="blog__title">Kitchen Staples</h3>
+            <p class="blog__text blog__text--green">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quaerat, inventore tempore quasi sapiente architecto sed voluptates. Provident hic, reprehenderit possimus repellendus minus tenetur vitae harum! Mollitia neque facere unde!</p>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-10-xl"></div>
-            <a href="mythsbusted.html" </a> <img
-              src="C:\Users\carla\OneDrive\Desktop\College\Web Design\WebDesign\src\Images\fatloss.jpg.jpg"
-              alt="Training" heiht="200" width="280">
-              <h3>Myths Busted - Fatloss Edition!</h3>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-12 col-10-xl"></div>
-              <a href="leaneating.html" </a> <img
-                src="C:\Users\carla\OneDrive\Desktop\College\Web Design\WebDesign\src\Images\leaneating2.jpg"
-                alt="Lean Eating" heiht="200" width="280">
-                <h3>Lean Eating</h3>
-            </div>
-            <div class="container">
-              <div class="row">
-                <div class="col-12 col-10-xl"></div>
-                <a href="beachbod.html" </a> <img
-                  src="C:\Users\carla\OneDrive\Desktop\College\Web Design\WebDesign\src\Images\beachbod.jpg"
-                  alt="Lean Eating" heiht="200" width="280">
-                  <h3>Beach Bod Basics</h3>
-              </div>
-            </div>
-          </div>
+
+        <div class="col-12 col-3-xl">
+          <a href="mythsbusted.html"> <img src="\Images\fatloss.jpg" alt="Training" heiht="200" width="280"></a>
+          <h3>Myths Busted - Fatloss Edition!</h3>
+          <p class="blog__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quaerat, inventore tempore quasi sapiente architecto sed voluptates. Provident hic, reprehenderit possimus repellendus minus tenetur vitae harum! Mollitia neque facere unde!</p>
         </div>
+
+        <div class="col-12 col-3-xl">
+          <a href="leaneating.html"> <img src="\Images\leaneating2.jpg" alt="Lean Eating" heiht="200" width="280"></a>
+          <h3>Lean Eating</h3>
+        </div>
+
+        <div class="col-12 col-3-xl">
+          <a href="beachbod.html"> 
+            <img src="\Images\beachbod.jpg" alt="Lean Eating" heiht="200" width="280"> 
+          </a>
+          <h3>Beach Bod Basics</h3>
+        </div>
+        </div>
+  </div>
   </section>
   <footer>
     Footer
