--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,8 +10,11 @@
   <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
   <script type="text/javascript" src="js/script.js"></script>
-  <title>YouAreWhatYouEat</title>
+  <link rel="stylesheet" href="./font-awesome-animation.min.css">
+  <title>You are what you eat</title>
 </head>
 
 <body>
@@ -37,45 +41,60 @@
 
   <section class="homeSection homeSection--first hero">
     <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-6">
-          <div class="hero__left">
-            <img class="hero__img" src="images/breakfast.jpg" alt="breakfast" />
+      <div class="row hero__main-row">
+        <div class="hero__wrapper">
+          <div class="col-12">
+            <div class="hero__left">
+              <h1 class="hero__title">You are what you eat!</h1>
+              <button class="hero__button">
+                Get some food <i class="hero__button-icon fas fa-hamburger faa-burst animated-hover"></i>
+              </button>
+            </div>
           </div>
-        </div>
-        <div class="col-12 col-md-6">
-
+          <div class="col-12">
+            <div class="hero__right">
+              <div class="hero__img-wrapper">
+                <img class="hero__img" src="/images/breakfast_full.jpg" alt="sandwich">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="homeSection homeSection--second">
+  <section class="homeSection--second three-block">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-3-xl">
-          <h1>Recipies Lorem Ipsum</h1>
+        <div class="col-12">
+          <h2 class="three-block__title">Recipies Lorem Ipsum</h2>
           <div class="row">
             <div class="col-12 col-4-lg">
-              <h2>Hello Food</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
+              <div class="three-block__box three-block__box--first">
+                <h3 class="three-block__subtitle">Hello Food</h3>
+                <p class="three-block__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
             </div>
             <div class="col-12 col-4-lg">
-              <h2>Hello Food</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
+              <div class="three-block__box three-block__box--second">
+                <h3 class="three-block__subtitle">Hello Food</h3>
+                <p class="three-block__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
             </div>
             <div class="col-12 col-4-lg">
-              <h2>Hello Food</h2>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
+              <div class="three-block__box three-block__box--third">
+                <h3 class="three-block__subtitle">Hello Food</h3>
+                <p class="three-block__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -83,28 +102,47 @@
     </div>
   </section>
 
-  <section class="homeSection homeSection--third">
+  <section class="gallery">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-3-xl">
+        <div class="col-12">
+          <h1 class="gallery__title">What the heck?</h1>
+          <div class="row">
 
-        </div>
-      </div>
-    </div>
-  </section>
+            <div class="col-12 col-3-md">
+              <div class="row">
+                <div class="col-12 col-md-5">
+                  <img src="\images\rasberries.jpg" alt="">
+                </div>
+                <div class="col-12 col-md-7">
+                  <img src="\images\bananas.jpg" alt="">
 
-  <section class="homeSection homeSection--fourth">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 col-3-xl">
-
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-4-md">
+              <img src="\images\watermelon.jpg" alt="">
+            </div>
+            <div class="col-12 col-3-md">
+              <img src="\images\pear.jpg" alt="">
+            </div>
+            <div class="col-12 col-2-md">
+              <img src="\images\pinaple.jpg" alt="">
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
   <footer>
-    Footer
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          Footer
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 
