homepage-first version

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,85 @@
     </div>
   </section>
 
-  <section class="homeSection--second three-block">
+  <section class="intro homeSection homeSection--second">
+    <div class="container">
+      <div class="row ">
+        <div class="col-12 col-3-lg">
+          <div class="intro__image-wrapper">
+            <img class="intro__image js-intro__image" src="/images/shake.jpg" alt="">
+            <div class="intro__image-text-wrapper">
+              <h5 class="intro__image-text">Healthy food can be fun!</h5>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-12 col-9-lg">
+          <div class="intro__block">
+            <h1 class="intro__title">You can do better</h1>
+            <p class="intro__text">
+              Healthy food, diets, calories restriction - we kept thinking we were finding answers. But really, we were participating in this mass marketing of disordered eating. Lorem Ipsum dolores.
+            </p>
+          </div>
+
+          <div class="intro__diets">
+            <div class="row">
+              <a href="#" class="intro__link">
+                <div class="col-6 col-4-md">
+                  <div class="intro__diet">
+                    <img src="/images/icons/no-gluten.png" alt="" class="intro__diet-icon">
+                    <p class="intro__diet-title">Gluten Free</p>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="intro__link">
+                <div class="col-6 col-4-md">
+                  <div class="intro__diet">
+                    <img src="/images/icons/vegan.png" alt="" class="intro__diet-icon">
+                    <p class="intro__diet-title">Vegan</p>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="intro__link">
+                <div class="col-6 col-4-md">
+                  <div class="intro__diet">
+                    <img src="/images/icons/vegetarian-diet.png" alt="" class="intro__diet-icon">
+                    <p class="intro__diet-title">Vegetarian</p>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="intro__link">
+                <div class="col-6 col-4-md">
+                  <div class="intro__diet">
+                    <img src="/images/icons/paleo.png" alt="" class="intro__diet-icon">
+                    <p class="intro__diet-title">Paleo</p>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="intro__link">
+                <div class="col-6 col-4-md">
+                  <div class="intro__diet">
+                    <img src="/images/icons/pescetarian.png" alt="" class="intro__diet-icon">
+                    <p class="intro__diet-title">Pescetarian</p>
+                  </div>
+                </div>
+              </a>
+              <a href="#" class="intro__link">
+                <div class="col-6 col-4-md">
+                  <div class="intro__diet">
+                    <img src="/images/icons/detox.png" alt="" class="intro__diet-icon">
+                    <p class="intro__diet-title">Detox</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="homeSection homeSection--third three-block">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -102,44 +180,38 @@
     </div>
   </section>
 
-  <section class="gallery">
-    <div class="container">
+  <footer class="footer">
+    <div class="container footer__container">
       <div class="row">
-        <div class="col-12">
-          <h1 class="gallery__title">What the heck?</h1>
-          <div class="row">
-
-            <div class="col-12 col-3-md">
-              <div class="row">
-                <div class="col-12 col-md-5">
-                  <img src="\images\rasberries.jpg" alt="">
-                </div>
-                <div class="col-12 col-md-7">
-                  <img src="\images\bananas.jpg" alt="">
-
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-4-md">
-              <img src="\images\watermelon.jpg" alt="">
-            </div>
-            <div class="col-12 col-3-md">
-              <img src="\images\pear.jpg" alt="">
-            </div>
-            <div class="col-12 col-2-md">
-              <img src="\images\pinaple.jpg" alt="">
-            </div>
+        <div class="col-12 col-3-md">
+          <a href="#home" class="footer__logo">LOGO</a>
+        </div>
+        <div class="col-12 col-3-md">
+          <div class="footer__list">
+            <a href="#recipes" class="footer__link">Recipes</a>
+            <a href="#blog" class="footer__link">Blog</a>
+            <a href="#calculator" class="footer__link">Calculator</a>
           </div>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          Footer
+        <div class="col-12 col-3-md">
+          <div class="footer__list">
+            <a href="#about" class="footer__link">About</a>
+            <a href="#lifestyle" class="footer__link">Lifestyle</a>
+            <a href="#contact" class="footer__link">Contact</a>
+          </div>
+        </div>
+        <div class="col-12 col-3-md">
+          <div class="footer__contact-wrapper">
+          <div class="footer__social-media">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-pinterest-p"></i>
+          </div>
+          <div class="footer__contact">
+            <p>5 Fitzgerald Street, Harold's Cross,</p>
+            <p>Dublin 6, D08X65 </p>
+          </div>
+          </div>
         </div>
       </div>
     </div>
