--- a/src/bin.html
+++ b/src/bin.html
@@ -1,52 +1,50 @@
-<!-- <section class="homeSection homeSection--second">
+<!-- <section class="homeSection gallery">
   <div class="container">
     <div class="row">
-      <div class="col-12 col-3-xl">
-        <h1>Recipies Lorem Ipsum</h1>
+      <div class="col-12">
+        <h1 class="gallery__title">What the heck?</h1>
         <div class="row">
-          <div class="col-12 col-4-lg">
-            <h2>Hello Food</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+          <div class="col-12 col-8-sm col-4-md">
+            <div class="row">
+              <div class="col-12 col-sm-6">
+                <img src="\images\rasberries.jpg" alt="">
+              </div>
+              <div class="col-12 col-sm-6">
+                <img src="\images\bananas.jpg" alt="">
+
+              </div>
+            </div>
           </div>
-          <div class="col-12 col-4-lg">
-            <h2>Hello Food</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+          <div class="col-12 col-4-sm col-4-md">
+            <img src="\images\watermelon.jpg" alt="">
           </div>
-          <div class="col-12 col-4-lg">
-            <h2>Hello Food</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
+          <div class="col-12 col-6-sm col-4-md">
+            <img src="\images\pear.jpg" alt="">
+          </div>
+          <div class="col-12 col-4-sm ">
+            <img src="\images\pinaple.jpg" alt="">
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
-
-<section class="homeSection homeSection--third">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-3-xl">
-
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="homeSection homeSection--fourth">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-3-xl">
-
-      </div>
-    </div>
-  </div>
 </section> -->
+
+
+<!-- .gallery {
+  img {
+    max-width: 280px;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (min-width: $bp-sm) {
+  .gallery {
+    img {
+      max-width: 180px;
+      display: block;
+      margin: 0 auto;
+    }
+  } -->
+}
