fixing bugs for about

--- a/src/about.html
+++ b/src/about.html
@@ -32,29 +32,26 @@
       </div>
     </div>
   </navbar>
-  <br>
-  <br>
-  <br>
-  <br>
- <section id="about-us">
-   <div class="container">
-     <div class="row">
-       <div id="about-text" class="col-4">
-         <h1 class="text-center">About Us</h1>
-         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis vitae modi quia? 
-           Id provident quia totam eum corrupti, autem, dignissimos aliquam amet doloremque temporibus pariatur nisi libero distinctio, quae non.</p>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-           Doloremque cupiditate aperiam ex libero nam excepturi veniam nesciunt dignissimos. Id doloremque odit alias laborum illum facere dolorem non est aspernatur eligendi!</p>
-       </div>
-       <div class="col-sm-5">
-       <div class="img-wrap">
-         <img src="images/food.jpg" alt="A picture of different food types">
-       </div>
-     </div>
-   </div>
-  </div>
-
- </section>
+  <section class="about" id="about-us">
+    <div class="container">
+      <div class="row">
+        <div class="col col-6-md">
+          <div class="about__text">
+            <h1 class="about__title">About Us</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis vitae modi quia?
+              Id provident quia totam eum corrupti, autem, dignissimos aliquam amet doloremque temporibus pariatur nisi libero distinctio, quae non.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Doloremque cupiditate aperiam ex libero nam excepturi veniam nesciunt dignissimos. Id doloremque odit alias laborum illum facere dolorem non est aspernatur eligendi!</p>
+          </div>
+        </div>
+        <div class="col col-6-md">
+          <div class="about__imgWrapper">
+            <img class="about__image" src="images/food.jpg" alt="A picture of different food types">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <footer class="footer">
     <div class="container footer__container">
