Added some styling, replaced dummy text

--- a/src/contact.html
+++ b/src/contact.html
@@ -26,7 +26,7 @@
         <a href="#recipes" class="navbar__link">Recipes</a>
         <a href="#blog" class="navbar__link">Blog</a>
         <a href="#calculator" class="navbar__link">Calculator</a>
-        <a href="contact.html" class="navbar__link">Contact</a>
+        <a href="#contact" class="navbar__link">Contact</a>
         <a href="about.html" class="navbar__link">About</a>
         <a href="#lifestyle" class="navbar__link">Lifestyle</a>
       </div>
@@ -37,21 +37,18 @@
       <div class="row">
         <div class="col col-6-md">
           <div class="about__text">
-            <h1 class="about__title">About Us</h1>
-            <p> <strong>Hello there!</strong> I suppose you're on this page to find out how we got started and why we do what we do? Well it's quite simple really,
-              we are a bunch of four like minded friends who have experiences with varying diets and lifestyles which we are pasionate about and
-              would like to pass on these experiences to others who may not know where to begin. There are many different diet types with a great number of people
-              who swear by each of them for different reasons, so we thought we would compile our thoughts and opinions on each one listed for anyone and everyone to
-              digest.
+            <h1 class="about__title">Contact Us</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laborum eaque,
+                 numquam qui quis sequi non totam praesentium, repudiandae esse deserunt perferendis magni aperiam quas suscipit excepturi
+                  necessitatibus, ad consequatur.
             <p>
               <p>
-                As we were listing out thoughts and experiences on these varying diets we got the idea to also list a bunch of recipes that we have enjoyed over the years
-                that are not too difficult to make! After all it's no fun to have to eat the same exact meals everyday, as even if they are 
-                just as good for you no matter how many times you eat them, it can get very boring eating avacado with every meal (even though we love avacado!)
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae nobis in doloremque,
+                 earum possimus quae quam aspernatur? Iste perspiciatis unde hic, porro ullam corporis impedit explicabo vel minus, illum molestias.
               </p>
               <p>
-                We sincerly hope you enjoyed browsing our website and have learned something new towars living a healthier and happier life! 
-                And if you would like to contact us about anything, please visit our <a href="contact.html"> contact page</a>. <em>Happy eating!</em>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore dolores cumque,
+                 soluta voluptatem minima fuga quidem placeat! Provident asperiores, est adipisci enim maxime fuga eveniet quis atque quibusdam eos officia!
               </p>
           </div>
         </div>
