--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <a href="#calculator" class="navbar__link">Calculator</a>
         <a href="#contact" class="navbar__link">Contact</a>
         <a href="#about" class="navbar__link">About</a>
-        <a href="#lifestyle" class="navbar__link">Lifestyle</a>
+        <a href="lifestyle.html" class="navbar__link">Lifestyle</a>
       </div>
     </div>
   </navbar>
@@ -54,7 +54,7 @@
           <div class="col-12">
             <div class="hero__right">
               <div class="hero__img-wrapper">
-                <img class="hero__img" src="/images/breakfast_full.jpg" alt="sandwich">
+                <img class="hero__img" src="images/breakfast_full.jpg" alt="sandwich">
               </div>
             </div>
           </div>
@@ -68,7 +68,7 @@
       <div class="row ">
         <div class="col-12 col-3-lg">
           <div class="intro__image-wrapper">
-            <img class="intro__image js-intro__image" src="/images/shake.jpg" alt="">
+            <img class="intro__image js-intro__image" src="images/shake.jpg" alt="">
             <div class="intro__image-text-wrapper">
               <h5 class="intro__image-text">Healthy food can be fun!</h5>
             </div>
@@ -88,7 +88,7 @@
               <a href="#" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
-                    <img src="/images/icons/no-gluten.png" alt="" class="intro__diet-icon">
+                    <img src="images/icons/no-gluten.png" alt="" class="intro__diet-icon">
                     <p class="intro__diet-title">Gluten Free</p>
                   </div>
                 </div>
@@ -96,7 +96,7 @@
               <a href="#" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
-                    <img src="/images/icons/vegan.png" alt="" class="intro__diet-icon">
+                    <img src="images/icons/vegan.png" alt="" class="intro__diet-icon">
                     <p class="intro__diet-title">Vegan</p>
                   </div>
                 </div>
@@ -104,7 +104,7 @@
               <a href="#" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
-                    <img src="/images/icons/vegetarian-diet.png" alt="" class="intro__diet-icon">
+                    <img src="images/icons/vegetarian-diet.png" alt="" class="intro__diet-icon">
                     <p class="intro__diet-title">Vegetarian</p>
                   </div>
                 </div>
@@ -112,7 +112,7 @@
               <a href="#" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
-                    <img src="/images/icons/paleo.png" alt="" class="intro__diet-icon">
+                    <img src="images/icons/paleo.png" alt="" class="intro__diet-icon">
                     <p class="intro__diet-title">Paleo</p>
                   </div>
                 </div>
@@ -120,7 +120,7 @@
               <a href="#" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
-                    <img src="/images/icons/pescetarian.png" alt="" class="intro__diet-icon">
+                    <img src="images/icons/pescetarian.png" alt="" class="intro__diet-icon">
                     <p class="intro__diet-title">Pescetarian</p>
                   </div>
                 </div>
@@ -128,7 +128,7 @@
               <a href="#" class="intro__link">
                 <div class="col-6 col-4-md">
                   <div class="intro__diet">
-                    <img src="/images/icons/detox.png" alt="" class="intro__diet-icon">
+                    <img src="images/icons/detox.png" alt="" class="intro__diet-icon">
                     <p class="intro__diet-title">Detox</p>
                   </div>
                 </div>
