--- a/src/mythsbusted.html
+++ b/src/mythsbusted.html
@@ -1,32 +1,73 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-    <title>Myths Busted - Fatloss Edition!</title>
-  </head>
-  <body>
-    <navbar>
-      <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-        <a href="#">Lifestyle</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/mythsbusted.css">
+  <script src="mythsbusted.js"></script>
+  <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
+  <script type="text/javascript" src="js/script.js"></script>
+  <link rel="stylesheet" href="./font-awesome-animation.min.css">
+  <title>Myths Busted</title>
+</head>
+
+<body>
+  <navbar>
+    <div class="js-navbar navbar">
+      <div class="navbar__header">
+        <a href="#home" class="navbar__logo">LOGO</a>
+        <span href="javascript:void(0);" class="navbar__button" onclick="myFunction()">
           <i class="fa fa-bars"></i>
-        </a>
+        </span>
       </div>
-    </navbar>
+
+      <div class="navbar__list">
+        <a href="#recipes" class="navbar__link">Recipes</a>
+        <a href="#blog" class="navbar__link">Blog</a>
+        <a href="#calculator" class="navbar__link">Calculator</a>
+        <a href="#contact" class="navbar__link">Contact</a>
+        <a href="#about" class="navbar__link">About</a>
+        <a href="#lifestyle" class="navbar__link">Lifestyle</a>
+      </div>
+    </div>
+  </navbar>
     <section>
-    <div class="MythsBusted"></div>
+      <br>
+      <br>
+      <br>
+    <section>
+    <div class="MythsBusted">
     <h1>Myths Busted - Fatloss Edition!</h1>
+
+    <div class="mySlides fade">
+        <div class="numbertext">1/2</div>
+        <img src="images\myth1.jpg" alt="Fitness" width="100%" height="auto">
+
+      </div>
+
+      <div class="mySlides fade">
+      <div class="numbertext">2/2</div>
+      <img src="images\myth2.jpg" alt="Fitness" width="100%" height="auto">
+    </div>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+<br>
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+</div>
+    <div class="myth1">
     <h3>Myth #1: Light Weight & High Reps Are Best For Fat Loss</h3>
-    <br>
-    <p>Much of the time, one of the first steps many take when attempting to lose weight is to begin working out, which is great! 
+    <p>Much of the time, one of the first steps many people take when attempting to lose weight is to begin working out, which is great! 
     But very often, this workout includes lifting a high amount of lightweight repetitions to burn fat.
     Unfortunately, that’s not always the best route to take, especially if you’re hoping to maintain muscle and strength. 
     The body is quite interesting in that it grows when it needs to and then stops when it doesn’t. In the case of muscle while dieting, this could not be any more true.
@@ -43,8 +84,10 @@
     <br>
     I suggest providing each workout with a specific purpose, using multiple rep ranges, with some high and some low, for a combination of strength-based training 
     as well as the more metabolically demanding workouts.
+  </div>
     </p>
     <br>
+    <div class="myth2">
     <h3>Myth #2: You Need Lots Of Cardio For Weight Loss</h3>
     <p>
     If high rep workouts are often the first step of many, then jumping on the treadmill to get some cardio in is the second. While cardio does provide advantages for burning fat, 
@@ -56,11 +99,42 @@
     that you’re burning from the cardio from your diet,  then weight loss will still occur .Rather than spending hours on the treadmill, I suggest sticking with resistance training 
     while reducing calories through your food. Then, once weight loss plateaus, you can incorporate cardio into your routine if you desire.
     </p>
+  </div>
     <br>
-    <p>Alex Ardelean - PT</p>
+    <div class="author"><p>Alex Ardelean - PT</p></div>
+    </section>
+  </div>
     <footer>
-            Footer
-          </footer>
+        <footer class="footer">
+            <div class="container footer__container">
+              <div class="row">
+                <div class="col-12 col-3-md">
+                  <a href="#home" class="footer__logo">LOGO</a>
+                </div>
+                <div class="col-12 col-3-md">
+                  <div class="footer__list">
+                    <a href="#recipes" class="footer__link">Recipes</a>
+                    <a href="#blog" class="footer__link">Blog</a>
+                    <a href="#calculator" class="footer__link">Calculator</a>
+                  </div>
+                </div>
+                <div class="col-12 col-3-md">
+                  <div class="footer__list">
+                    <a href="#about" class="footer__link">About</a>
+                    <a href="#lifestyle" class="footer__link">Lifestyle</a>
+                    <a href="#contact" class="footer__link">Contact</a>
+                  </div>
+                </div>
+                <div class="col-12 col-3-md">
+                  <div class="footer__contact-wrapper">
+                    <div class="footer__social-media">
+                      <i class="fab fa-facebook-f"></i>
+                      <i class="fab fa-twitter"></i>
+                      <i class="fab fa-pinterest-p"></i>
+                    </div>
+                    <div class="footer__contact">
+                      <p>5 Fitzgerald Street, Harold's Cross,</p>
+                      <p>Dublin 6, D08X65 </p>
         </body>
       </html>
       
