--- a/src/staples.html
+++ b/src/staples.html
@@ -1,36 +1,58 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/script.js"></script>
-    <title>Kitchen Staples</title>
-  </head>
-  <body>
-    <navbar>
-      <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-        <a href="#">Lifestyle</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/staples.css">
+  <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
+  <script type="text/javascript" src="js/script.js"></script>
+  <link rel="stylesheet" href="./font-awesome-animation.min.css">
+  <title>Kiten Staples</title>
+</head>
+
+<body>
+  <navbar>
+    <div class="js-navbar navbar">
+      <div class="navbar__header">
+        <a href="#home" class="navbar__logo">LOGO</a>
+        <span href="javascript:void(0);" class="navbar__button" onclick="myFunction()">
           <i class="fa fa-bars"></i>
-        </a>
+        </span>
       </div>
-    </navbar>
+
+      <div class="navbar__list">
+        <a href="#recipes" class="navbar__link">Recipes</a>
+        <a href="#blog" class="navbar__link">Blog</a>
+        <a href="#calculator" class="navbar__link">Calculator</a>
+        <a href="#contact" class="navbar__link">Contact</a>
+        <a href="#about" class="navbar__link">About</a>
+        <a href="#lifestyle" class="navbar__link">Lifestyle</a>
+      </div>
+    </div>
+  </navbar>
+  <br>
+  <br>
+  <br>
     <section>
-    <div class="KitchenStaples"></div>
-    <h1>Kitchen Staples</h1>
-    <p>Right now, there is more awareness than ever before around health and fitness. People have become more educated on the dangers of unhealthy eating and poor fitness levels. 
+        <h1>Kitchen Staples</h1>
+    <div class="KitchenStaples">
+        <p>Right now, there is more awareness than ever before around health and fitness. People have become more educated on the dangers of unhealthy eating and poor fitness levels. 
         With that, people have taken action to take better care of themselves. <br>
         A huge part of this is understanding the foods you need to nourish your body to help it function to its full capacity. 
         Everyone is so different, so there are endless possibilities out there for meals and snacks. That being said, whether you're a veggie, 
         vegan or keto-warrior, there are certain staples that are must-haves in the kitchen to make it all that little bit easier: </p>
-        <br>
+        </div><br>
+        <div class="PantryStaples">
         <p><h3>Pantry Staples</h3>
+        <img src="images\pantry.jpg" alt="Pantry" height="480" width="400" class="pantryimage">
         <ul>
             <li>Oil - I generally like Olive Oil or Sunflower Oil!</li>
             <li>Spices - Everyone should have at least the following:</li>
@@ -55,13 +77,19 @@
             <li>Soy Sauce</li>
             <li>Stock (chicken or vegetable)</li>
         </ul>
+        </div>
+        <div class="FreshProduce">
             <h3>Fresh Produce</h3>
+            <img src="images\garlic.jpg" alt="Garlic" height="280" width="300" class="garlicimage">
         <ul>
             <li>Of course at the top of this list is: <strong>Garlic!</strong></li>
             <li>Onions (to cook with your garlic)</li>
             <li>Fresh veggies - I like carrots and peppers, but to each their own!</li>
         </ul>
+        </div>
+        <div class="Gadgets">
         <h3>Gadgets</h3>
+        <img src="images\kitchenware.jpg" alt="kitchenware" height="320" width="250" class="kitchenware">
         <ul>
             <li>First and foremost: <strong>A non-stick pan!</strong></li>
             <li>Heat resistant spatula</li>
@@ -74,12 +102,42 @@
             <li>Vegetable Peeler</li>
             <li>Weighing scales</li>
             <li>A great caserole dish</li>
+          </div>
         </ul>
     </p>
-    <p>And there you have it folks, now that you've kitted out your kitchen, you're ready to get yourself cookin!</p>
+    <div class="end">
+    <h4>And there you have it folks, now that you've kitted out your kitchen, you're ready to get yourself cookin!</h4></div>
     <footer>
-        Footer
-      </footer>
-    </body>
-  </html>
+        <footer class="footer">
+            <div class="container footer__container">
+              <div class="row">
+                <div class="col-12 col-3-md">
+                  <a href="#home" class="footer__logo">LOGO</a>
+                </div>
+                <div class="col-12 col-3-md">
+                  <div class="footer__list">
+                    <a href="#recipes" class="footer__link">Recipes</a>
+                    <a href="#blog" class="footer__link">Blog</a>
+                    <a href="#calculator" class="footer__link">Calculator</a>
+                  </div>
+                </div>
+                <div class="col-12 col-3-md">
+                  <div class="footer__list">
+                    <a href="#about" class="footer__link">About</a>
+                    <a href="#lifestyle" class="footer__link">Lifestyle</a>
+                    <a href="#contact" class="footer__link">Contact</a>
+                  </div>
+                </div>
+                <div class="col-12 col-3-md">
+                  <div class="footer__contact-wrapper">
+                    <div class="footer__social-media">
+                      <i class="fab fa-facebook-f"></i>
+                      <i class="fab fa-twitter"></i>
+                      <i class="fab fa-pinterest-p"></i>
+                    </div>
+                    <div class="footer__contact">
+                      <p>5 Fitzgerald Street, Harold's Cross,</p>
+                      <p>Dublin 6, D08X65 </p>
+        </body>
+      </html>
   
