created contact form and added google maps

--- a/src/contact.html
+++ b/src/contact.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="css/styles.css">
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="js/script.js"></script>
   <title>You are what you eat</title>
+  
 </head>
 
 <body>
@@ -32,34 +33,34 @@
       </div>
     </div>
   </navbar>
-  <section class="about" id="about-us">
+  <section class="contact" id="contact-us">
     <div class="container">
       <div class="row">
         <div class="col col-6-md">
-          <div class="about__text">
-            <h1 class="about__title">Contact Us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi laborum eaque,
-                 numquam qui quis sequi non totam praesentium, repudiandae esse deserunt perferendis magni aperiam quas suscipit excepturi
-                  necessitatibus, ad consequatur.
-            <p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae nobis in doloremque,
-                 earum possimus quae quam aspernatur? Iste perspiciatis unde hic, porro ullam corporis impedit explicabo vel minus, illum molestias.
-              </p>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore dolores cumque,
-                 soluta voluptatem minima fuga quidem placeat! Provident asperiores, est adipisci enim maxime fuga eveniet quis atque quibusdam eos officia!
-              </p>
-          </div>
-        </div>
-        <div class="col col-6-md">
-          <div class="about__imgWrapper">
-            <img class="about__image" src="images/food.jpg" alt="A picture of different food types">
+          <div class="contact__text">
+            <h1 class="contact__title">Contact Us</h1>
+            <p> If you have any questions or helpful tips please feel free to contact us by filling out the form below,
+              we will respond as soon as we can!
+            </p>
+            <form class="form" action="action_page.php">
+              <label for="fname">Full Name:</label>
+              <input class="form__input" type="text" id="fname" name="fullname" placeholder="Your full name">
+              <label for="email">Email:</label>
+              <input class="form__input" type="email" id="email" name="email" placeholder="Enter your email">
+              <label for="subject">Subject:</label>
+              <textarea class="form__textarea" id="subject" name="subject" placeholder="Ask away!"
+                style="height:200px"></textarea>
+              <input class="form__submit" type="submit" value="Submit">
+            </form>
+            <div id="map">
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  
 
   <footer class="footer">
     <div class="container footer__container">
@@ -97,6 +98,23 @@
       </div>
     </div>
   </footer>
+
+  <script>
+    function initMap() {
+      var location = { lat: 53.3491058, lng: -6.2450008 };
+      var map = new google.maps.Map(document.getElementById("map"), {
+        zoom: 4,
+        center: location
+      });
+      var marker = new google.maps.Marker({
+        position: location,
+        map: map
+      })
+    }
+  </script>
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBe42PsLaFQTDrhnjMxB03nzbYTze5f8ls&callback=initMap"></script>
+
 </body>
 
 </html>
