--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <a href="#recipes" class="navbar__link">Recipes</a>
         <a href="#blog" class="navbar__link">Blog</a>
         <a href="#calculator" class="navbar__link">Calculator</a>
-        <a href="#contact" class="navbar__link">Contact</a>
+        <a href="contact.html" class="navbar__link">Contact</a>
         <a href="about.html" class="navbar__link">About</a>
         <a href="#lifestyle" class="navbar__link">Lifestyle</a>
       </div>
