added a bmi calcultor

--- a/src/contact.html
+++ b/src/contact.html
@@ -26,8 +26,8 @@
         <a href="index.html" class="navbar__link">Home</a>
         <a href="#recipes" class="navbar__link">Recipes</a>
         <a href="#blog" class="navbar__link">Blog</a>
-        <a href="#calculator" class="navbar__link">Calculator</a>
-        <a href="#contact" class="navbar__link">Contact</a>
+        <a href="calculator.html" class="navbar__link">Calculator</a>
+        <a href="contact.html" class="navbar__link">Contact</a>
         <a href="about.html" class="navbar__link">About</a>
         <a href="#lifestyle" class="navbar__link">Lifestyle</a>
       </div>
